[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Music/Game_Music_1.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Music/Energetic_music.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Music/Surface.mp3" type="AudioStream" id=3]
[ext_resource path="res://Singletons/SongManager.gd" type="Script" id=4]

[node name="SongManager" type="Node"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="CaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="HypeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SurfaceMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="finished" from="CaveMusic" to="." method="_on_CaveMusic_finished"]
[connection signal="finished" from="HypeMusic" to="." method="_on_HypeMusic_finished"]
